@@ -47,7 +47,7 @@ extern "C" {
 #define TF_USE_SYSTEM_THREAD 0x10
 #define TF_USE_KERNEL_APC 0x20
 
-#include <_ws_helpers/_xmitfile.h>
+#include <mingw_inc/_xmitfile.h>
 #ifndef __MSWSOCK_WS1_SHARED
   WINBOOL WINAPI TransmitFile(SOCKET hSocket,HANDLE hFile,DWORD nNumberOfBytesToWrite,DWORD nNumberOfBytesPerSend,LPOVERLAPPED lpOverlapped,LPTRANSMIT_FILE_BUFFERS lpTransmitBuffers,DWORD dwReserved);
   WINBOOL WINAPI AcceptEx(SOCKET sListenSocket,SOCKET sAcceptSocket,PVOID lpOutputBuffer,DWORD dwReceiveDataLength,DWORD dwLocalAddressLength,DWORD dwRemoteAddressLength,LPDWORD lpdwBytesReceived,LPOVERLAPPED lpOverlapped);
