@@ -1,3 +1,7 @@
+2010-05-23  Ozkan Sezer  <sezeroz@gmail.com>
+
+	* Renamed _ws_helpers to mingw_inc, adjusted all its users.
+
 2010-05-22  Ozkan Sezer  <sezeroz@gmail.com>
 
 	In case winsock2.h is included after winsock.h, probably by way of
